Added batch list retrieval logig update
